--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">Home</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#experience">bla bla </a></li>
+          <li><a href="#projects">nothing </a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
