--- a/index.html
+++ b/index.html
@@ -197,8 +197,12 @@
                   class="icon"
                 />
                 <div>
+                  <div>
+                  </div>
                   <h3>Material UI</h3>
                   <p>Intermediate</p>
+                </div>
+                <div>
                 </div>
               </article>
             </div>
