--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">aryanandoria447@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">aryan@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
