--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">Home</a></li>
-          <li><a href="#experience">Experience </a></li>
+          <li><a href="#experience">xperien </a></li>
           <li><a href="#projects">nothing </a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
